# oneginsort

./: .gitignore  CMakeLists.txt  comparators.c  comparators.h  main.c  my_qsort.c  my_qsort.h  output.txt  textio.c  textio.h
file_preparation/: CMakeLists.txt  main.c
input/: input.txt
result/: output.txt
